feat: add modular Twitter notification system
- Add twitter-api-v2 dependency for Twitter integration
- Create lib/twitter.js with modular notification system
- Integrate Twitter notifications with deployment logging
- Add Twitter configuration to utils.js and env.example
- Add --test-twitter command to test Twitter API connection
- Skip Twitter notifications for test mode, dry runs, and already deployed
- Support for success/failure notifications with deployment details
- Character limit handling and error management
- Tested and working with @NeedsArNS account

--- a/env.example
+++ b/env.example
@@ -25,3 +25,9 @@ ARWEAVE_GATEWAY=https://arweave.net
 
 # Optional: Server Configuration
 PORT=3000                       # tiny health server (useful for PaaS)
+
+# Optional: Twitter API Configuration
+TWITTER_APP_KEY=your_app_key
+TWITTER_APP_SECRET=your_app_secret
+TWITTER_ACCESS_TOKEN=your_access_token
+TWITTER_ACCESS_SECRET=your_access_secret
