--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@ardrive/turbo-sdk": "^1.32.0",
     "@ar.io/sdk": "^3.21.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "twitter-api-v2": "^1.15.0"
   },
   "devDependencies": {
     "eslint": "^8.0.0"
