--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -72,34 +72,7 @@ jobs:
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         run: |
-          # Create a mock deployment data for the announcement
-          node -e "
-          const { postTemplateAnnouncement } = require('./lib/twitter.js');
-          
-          const deploymentData = {
-            success: true,
-            undername: '${{ steps.deployment.outputs.hash }}',
-            commitHash: '${{ steps.deployment.outputs.hash }}',
-            filePath: 'hello-world.txt',
-            txId: 'github-action-${{ github.run_id }}',
-            fileSize: 0,
-            duration: 0
-          };
-          
-          postTemplateAnnouncement(deploymentData, true)
-            .then(result => {
-              if (result.success) {
-                console.log('✅ Twitter announcement posted successfully');
-              } else {
-                console.log('❌ Twitter announcement failed:', result.error || result.reason);
-                process.exit(1);
-              }
-            })
-            .catch(error => {
-              console.error('❌ Twitter announcement error:', error.message);
-              process.exit(1);
-            });
-          "
+          node scripts/announce.js "${{ steps.deployment.outputs.hash }}" "hello-world.txt"
 
       - name: Announcement failed
         if: steps.deployment.outputs.hash == ''
