--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -20,15 +20,12 @@ on:
     workflows: ["Deploy on push"]
     types: [completed]
     branches: [main]
-  push:
-    branches: [main]
-    paths: ['index.html', 'hello-world.txt']
 
 jobs:
   announce:
     runs-on: ubuntu-latest
     # Only run if the deploy workflow succeeded or manual trigger
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     permissions:
       contents: read
     steps:
@@ -72,20 +69,6 @@ jobs:
             echo "file_path=${{ github.event.inputs.file_path }}" >> $GITHUB_OUTPUT
             echo "message=${{ github.event.inputs.custom_message }}" >> $GITHUB_OUTPUT
             echo "trigger=manual" >> $GITHUB_OUTPUT
-          elif [ "${{ github.event_name }}" = "push" ]; then
-            echo "🚀 Push trigger detected"
-            # Generate hash from the latest commit
-            COMMIT_HASH=$(git rev-parse --short HEAD)
-            CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD | grep -E '\.(html|txt)$' | head -1)
-            if [ -z "$CHANGED_FILES" ]; then
-              CHANGED_FILES="index.html"
-            fi
-            echo "hash=$COMMIT_HASH" >> $GITHUB_OUTPUT
-            echo "file_path=$CHANGED_FILES" >> $GITHUB_OUTPUT
-            echo "message=" >> $GITHUB_OUTPUT
-            echo "trigger=push" >> $GITHUB_OUTPUT
-            echo "📁 Detected file: $CHANGED_FILES"
-            echo "🔑 Generated hash: $COMMIT_HASH"
           else
             echo "🔄 Workflow run trigger detected"
             # Try to get the latest deployment hash from logs
