Fix deployment workflow to only run when manually triggered
- Change deploy.yml from push trigger to workflow_dispatch only
- Add input parameters for file_path and message
- Update workflow name to 'ðŸš€ Deploy to Arweave'
- Update announce.yml to reference correct workflow name
- Now deployments only happen when explicitly requested

--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -17,7 +17,7 @@ on:
         required: false
         type: string
   workflow_run:
-    workflows: ["Deploy on push"]
+    workflows: ["🚀 Deploy to Arweave"]
     types: [completed]
     branches: [main]
 
