--- a/env.example
+++ b/env.example
@@ -31,3 +31,6 @@ TWITTER_APP_KEY=your_app_key
 TWITTER_APP_SECRET=your_app_secret
 TWITTER_ACCESS_TOKEN=your_access_token
 TWITTER_ACCESS_SECRET=your_access_secret
+
+# GitHub API (for triggering workflows)
+GITHUB_TOKEN=your_github_personal_access_token
