Replace GitHub CLI with REPO_TOKEN for all GitHub operations
- Update all scripts to use REPO_TOKEN instead of GITHUB_TOKEN
- Create scripts/auto-merge.js for PR merging via REST API
- Update auto-merge.yml and manual-merge.yml to use new script
- Remove dependency on GitHub CLI (gh) completely
- Use single REPO_TOKEN with pulls, merges, and actions permissions
- Much cleaner and more reliable for AI agents

--- a/env.example
+++ b/env.example
@@ -32,5 +32,5 @@ TWITTER_APP_SECRET=your_app_secret
 TWITTER_ACCESS_TOKEN=your_access_token
 TWITTER_ACCESS_SECRET=your_access_secret
 
-# GitHub API (for triggering workflows)
-GITHUB_TOKEN=your_github_personal_access_token
+# GitHub API (for triggering workflows and auto-merge)
+REPO_TOKEN=your_github_personal_access_token
