--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -31,18 +31,10 @@ jobs:
           node deploy.js --test-mode --file hello-world.txt --content "test"
           echo "✅ Validation passed"
 
-      - name: Mark PR as ready for review (if draft)
-        if: github.event.pull_request.draft == true
-        run: |
-          echo "📝 Marking draft PR as ready for review..."
-          gh pr ready ${{ github.event.pull_request.number }}
-          echo "✅ PR marked as ready for review"
-
       - name: Auto-merge Agent PR
-        uses: fastify/github-action-merge-dependabot@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          target: main
-          merge-method: squash
-          merge-commit-message: "🤖 Auto-merge: ${{ github.event.pull_request.title }}"
-          delete-branch: true
+        env:
+          REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
+        run: |
+          echo "🔄 Auto-merging PR #${{ github.event.pull_request.number }}..."
+          node scripts/auto-merge.js ${{ github.event.pull_request.number }} squash
+          echo "✅ PR auto-merged successfully"
