--- a/.github/workflows/manual-merge.yml
+++ b/.github/workflows/manual-merge.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Auto-merge PR
         env:
-          REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             echo "🔄 Manually merging PR #${{ github.event.inputs.pr_number }}..."
