--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -12,6 +12,14 @@ on:
         required: false
         type: string
         default: 'index.html'
+      announce_type:
+        description: 'Announcement type'
+        required: false
+        type: choice
+        default: 'dm'
+        options:
+          - 'dm'
+          - 'public'
       custom_message:
         description: 'Custom message (optional)'
         required: false
@@ -123,12 +131,20 @@ jobs:
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         run: |
+          # Determine announcement type
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            ANNOUNCE_TYPE="${{ github.event.inputs.announce_type }}"
+          else
+            ANNOUNCE_TYPE="dm"  # Default to DM for automatic announcements
+          fi
+          
           echo "🐦 Posting announcement to Twitter..."
           echo "📁 File: ${{ steps.deployment.outputs.file_path }}"
           echo "🔑 Hash: ${{ steps.deployment.outputs.hash }}"
           echo "🎯 Trigger: ${{ steps.deployment.outputs.trigger }}"
+          echo "📢 Type: $ANNOUNCE_TYPE"
           
-          if node scripts/announce.js "${{ steps.deployment.outputs.hash }}" "${{ steps.deployment.outputs.file_path }}"; then
+          if node scripts/announce.js "${{ steps.deployment.outputs.hash }}" "${{ steps.deployment.outputs.file_path }}" "$ANNOUNCE_TYPE"; then
             echo "✅ Twitter announcement posted successfully!"
           else
             echo "❌ Twitter announcement failed"
