Fix auto-merge workflows - add missing npm ci step
- Add 'Install dependencies' step to both auto-merge and manual-merge workflows
- Fixes ERR_MODULE_NOT_FOUND error for 'dotenv' package
- Auto-merge script requires dependencies to be installed before running
- Both workflows now properly install dependencies before executing scripts

--- a/.github/workflows/manual-merge.yml
+++ b/.github/workflows/manual-merge.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Auto-merge PR
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
