--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Auto-merge Agent PR
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
