--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -13,12 +13,12 @@ on:
         type: string
         default: 'index.html'
       announce_type:
-        description: 'Announcement type (DM only)'
+        description: 'Announcement type (public only)'
         required: false
         type: choice
-        default: 'dm'
+        default: 'public'
         options:
-          - 'dm'
+          - 'public'
       custom_message:
         description: 'Custom message (optional)'
         required: false
@@ -130,14 +130,14 @@ jobs:
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         run: |
-          # Always use DM for announcements
-          ANNOUNCE_TYPE="dm"
+          # Always use public announcements
+          ANNOUNCE_TYPE="public"
           
-          echo "📩 Sending DM announcement to Twitter..."
+          echo "🐦 Posting public announcement to Twitter..."
           echo "📁 File: ${{ steps.deployment.outputs.file_path }}"
           echo "🔑 Hash: ${{ steps.deployment.outputs.hash }}"
           echo "🎯 Trigger: ${{ steps.deployment.outputs.trigger }}"
-          echo "📢 Type: DM to @jonniesparkles"
+          echo "📢 Type: Public tweet"
           
           if node scripts/announce.js "${{ steps.deployment.outputs.hash }}" "${{ steps.deployment.outputs.file_path }}" "$ANNOUNCE_TYPE"; then
             echo "✅ Twitter announcement posted successfully!"
