Add Discord notifications

--- a/env.example
+++ b/env.example
@@ -32,5 +32,8 @@ TWITTER_APP_SECRET=your_app_secret
 TWITTER_ACCESS_TOKEN=your_access_token
 TWITTER_ACCESS_SECRET=your_access_secret
 
+# Optional: Discord Webhook Configuration
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
+
 # GitHub API (for triggering workflows and auto-merge)
 REPO_TOKEN=your_github_personal_access_token
