--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -13,12 +13,12 @@ on:
         type: string
         default: 'index.html'
       announce_type:
-        description: 'Announcement type (public only)'
+        description: 'Announcement type (Discord only)'
         required: false
         type: choice
-        default: 'public'
+        default: 'discord'
         options:
-          - 'public'
+          - 'discord'
       custom_message:
         description: 'Custom message (optional)'
         required: false
@@ -118,31 +118,32 @@ jobs:
             fi
           fi
 
-      - name: 🐦 Announce on Twitter
+      - name: 📢 Announce on Discord
         if: steps.deployment.outputs.hash != ''
         env:
           ANT_PROCESS_ID: ${{ secrets.ANT_PROCESS_ID }}
           OWNER_ARNS_NAME: ${{ secrets.OWNER_ARNS_NAME }}
           WALLET_ADDRESS: ${{ secrets.WALLET_ADDRESS }}
           ARWEAVE_JWK_JSON: ${{ secrets.ARWEAVE_JWK_JSON }}
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
           TWITTER_APP_KEY: ${{ secrets.TWITTER_APP_KEY }}
           TWITTER_APP_SECRET: ${{ secrets.TWITTER_APP_SECRET }}
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         run: |
-          # Always use public announcements
-          ANNOUNCE_TYPE="public"
+          # Always use Discord announcements
+          ANNOUNCE_TYPE="discord"
           
-          echo "🐦 Posting public announcement to Twitter..."
+          echo "📢 Sending Discord notification..."
           echo "📁 File: ${{ steps.deployment.outputs.file_path }}"
           echo "🔑 Hash: ${{ steps.deployment.outputs.hash }}"
           echo "🎯 Trigger: ${{ steps.deployment.outputs.trigger }}"
-          echo "📢 Type: Public tweet"
+          echo "📢 Type: Discord notification"
           
-          if node scripts/announce.js "${{ steps.deployment.outputs.hash }}" "${{ steps.deployment.outputs.file_path }}" "$ANNOUNCE_TYPE"; then
-            echo "✅ Twitter announcement posted successfully!"
+          if node scripts/discord-announce.js "${{ steps.deployment.outputs.hash }}" "${{ steps.deployment.outputs.file_path }}"; then
+            echo "✅ Discord notification sent successfully!"
           else
-            echo "❌ Twitter announcement failed"
+            echo "❌ Discord notification failed"
             exit 1
           fi
 
