--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -1,4 +1,4 @@
-name: 🐦 Twitter Deployment Announcement
+name: 📢 Discord Deployment Announcement
 
 on:
   workflow_dispatch:
@@ -50,18 +50,15 @@ jobs:
       - name: 📦 Install Dependencies
         run: npm ci
 
-      - name: 🧪 Test Twitter Connection
+      - name: 🧪 Test Discord Connection
         env:
-          TWITTER_APP_KEY: ${{ secrets.TWITTER_APP_KEY }}
-          TWITTER_APP_SECRET: ${{ secrets.TWITTER_APP_SECRET }}
-          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-          TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
-          echo "🔍 Testing Twitter API connection..."
-          if node deploy.js --test-twitter; then
-            echo "✅ Twitter connection successful"
+          echo "🔍 Testing Discord webhook connection..."
+          if node deploy.js --test-discord; then
+            echo "✅ Discord connection successful"
           else
-            echo "❌ Twitter connection failed - skipping announcement"
+            echo "❌ Discord connection failed - skipping announcement"
             exit 0
           fi
 
@@ -126,10 +123,6 @@ jobs:
           WALLET_ADDRESS: ${{ secrets.WALLET_ADDRESS }}
           ARWEAVE_JWK_JSON: ${{ secrets.ARWEAVE_JWK_JSON }}
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          TWITTER_APP_KEY: ${{ secrets.TWITTER_APP_KEY }}
-          TWITTER_APP_SECRET: ${{ secrets.TWITTER_APP_SECRET }}
-          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-          TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         run: |
           # Always use Discord announcements
           ANNOUNCE_TYPE="discord"
