--- a/apps.json
+++ b/apps.json
@@ -6,9 +6,9 @@
       "name": "Hello World App",
       "description": "Simple text-based greeting app",
       "type": "static",
-      "entryPoint": "deploy/hello-world.txt",
+      "entryPoint": "apps/hello-world/index.txt",
       "buildCommand": null,
-      "outputDir": "deploy",
+      "outputDir": "apps/hello-world",
       "enabled": true,
       "lastDeployed": null,
       "deploymentCount": 0
@@ -17,9 +17,9 @@
       "name": "Hello Anthony App",
       "description": "Interactive HTML greeting page for Anthony",
       "type": "static",
-      "entryPoint": "deploy/hello-anthony.html",
+      "entryPoint": "apps/hello-anthony/index.html",
       "buildCommand": null,
-      "outputDir": "deploy",
+      "outputDir": "apps/hello-anthony",
       "enabled": true,
       "lastDeployed": null,
       "deploymentCount": 0
@@ -28,20 +28,9 @@
       "name": "Deployment Celebration",
       "description": "Interactive celebration page for successful deployments",
       "type": "static",
-      "entryPoint": "deploy/index.html",
+      "entryPoint": "apps/celebration/index.html",
       "buildCommand": null,
-      "outputDir": "deploy",
-      "enabled": true,
-      "lastDeployed": null,
-      "deploymentCount": 0
-    },
-    "index": {
-      "name": "Index",
-      "description": "Auto-discovered index.html app",
-      "type": "static",
-      "entryPoint": "deploy/index.html",
-      "buildCommand": null,
-      "outputDir": "deploy",
+      "outputDir": "apps/celebration",
       "enabled": true,
       "lastDeployed": null,
       "deploymentCount": 0
