--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Detect Changed Files
         id: changed-files
         run: |
-          echo "🔍 Detecting changed files..."
+          echo "🔍 Using hash-based change detection in JavaScript deployment code..."
           
           if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ -n "${{ github.event.inputs.file_path }}" ]; then
             echo "📝 Manual trigger with file path detected"
@@ -63,39 +63,10 @@ jobs:
             echo "message=${{ github.event.inputs.message }}" >> $GITHUB_OUTPUT
             echo "deploy_type=manual" >> $GITHUB_OUTPUT
           else
-            echo "🔄 Push to main detected - analyzing changes"
-            
-            # Get the list of changed files from the last commit
-            # Handle case where HEAD~1 doesn't exist (first commit or shallow clone)
-            if git rev-parse HEAD~1 >/dev/null 2>&1; then
-              CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD)
-            else
-              echo "⚠️ HEAD~1 not available (first commit or shallow clone), using all files from current commit"
-              CHANGED_FILES=$(git diff-tree --no-commit-id --name-only -r HEAD)
-            fi
-            echo "📁 Changed files: $CHANGED_FILES"
-            
-            # Filter for deployable files from apps folder only
-            DEPLOYABLE_FILES=$(echo "$CHANGED_FILES" | grep -E '^apps/' | grep -E '\.(txt|html|js|css|json|md)$' || true)
-            
-            # Check for app factory changes
-            APPS_FILES=$(echo "$CHANGED_FILES" | grep '^apps/' || true)
-            
-            if [ -z "$DEPLOYABLE_FILES" ]; then
-              echo "⚠️ No deployable files found in changes"
-              echo "files=" >> $GITHUB_OUTPUT
-              echo "message=No deployable files changed" >> $GITHUB_OUTPUT
-              echo "deploy_type=none" >> $GITHUB_OUTPUT
-            else
-              echo "📦 Deployable files: $DEPLOYABLE_FILES"
-              # Convert newlines to spaces for proper GitHub Actions output format
-              DEPLOYABLE_FILES_FORMATTED=$(echo "$DEPLOYABLE_FILES" | tr '\n' ' ')
-              echo "files=$DEPLOYABLE_FILES_FORMATTED" >> $GITHUB_OUTPUT
-              echo "message=Auto-deployed changed files after merge to main" >> $GITHUB_OUTPUT
-              
-              # Deployment type is always apps now
-              echo "deploy_type=apps" >> $GITHUB_OUTPUT
-            fi
+            echo "🔄 Push to main detected - using hash-based detection"
+            echo "files=all" >> $GITHUB_OUTPUT
+            echo "message=Auto-deployed using hash-based change detection" >> $GITHUB_OUTPUT
+            echo "deploy_type=apps" >> $GITHUB_OUTPUT
           fi
 
       - name: Deploy to Arweave
@@ -155,23 +126,38 @@ jobs:
               DEPLOYMENT_ERRORS="$DEPLOYMENT_ERRORS\n❌ File not found: $FILE_PATH"
             fi
           else
-            # Handle automatic deployments
-            # Convert space-separated files back to newline-separated for processing
-            FILES_LIST=$(echo "${{ steps.changed-files.outputs.files }}" | tr ' ' '\n')
-            APPS_FILES=$(echo "$FILES_LIST" | grep '^apps/' || true)
-            
-            # Deploy apps using app factory
-            if [ -n "$APPS_FILES" ]; then
-              echo "📱 Deploying apps using app factory..."
-              # Extract unique app directories from changed files
-              APP_DIRS=$(echo "$APPS_FILES" | sed 's|apps/\([^/]*\)/.*|\1|' | sort -u)
-              for app_dir in $APP_DIRS; do
-                echo "📤 Deploying app: $app_dir"
-                if ! node deploy.js --app "$app_dir" --message "${{ steps.changed-files.outputs.message }}"; then
-                  DEPLOYMENT_SUCCESS=false
-                  DEPLOYMENT_ERRORS="$DEPLOYMENT_ERRORS\n❌ Failed to deploy app: $app_dir"
+            # Handle automatic deployments using hash-based detection
+            if [ "${{ steps.changed-files.outputs.files }}" = "all" ]; then
+              echo "📱 Deploying all apps using hash-based change detection..."
+              # Deploy all apps - the JavaScript code will handle change detection
+              for app_dir in apps/*/; do
+                if [ -d "$app_dir" ]; then
+                  app_name=$(basename "$app_dir")
+                  echo "📤 Deploying app: $app_name"
+                  if ! node deploy.js --app "$app_name" --message "${{ steps.changed-files.outputs.message }}"; then
+                    DEPLOYMENT_SUCCESS=false
+                    DEPLOYMENT_ERRORS="$DEPLOYMENT_ERRORS\n❌ Failed to deploy app: $app_name"
+                  fi
                 fi
               done
+            else
+              # Handle specific files (legacy support)
+              FILES_LIST=$(echo "${{ steps.changed-files.outputs.files }}" | tr ' ' '\n')
+              APPS_FILES=$(echo "$FILES_LIST" | grep '^apps/' || true)
+              
+              # Deploy apps using app factory
+              if [ -n "$APPS_FILES" ]; then
+                echo "📱 Deploying apps using app factory..."
+                # Extract unique app directories from changed files
+                APP_DIRS=$(echo "$APPS_FILES" | sed 's|apps/\([^/]*\)/.*|\1|' | sort -u)
+                for app_dir in $APP_DIRS; do
+                  echo "📤 Deploying app: $app_dir"
+                  if ! node deploy.js --app "$app_dir" --message "${{ steps.changed-files.outputs.message }}"; then
+                    DEPLOYMENT_SUCCESS=false
+                    DEPLOYMENT_ERRORS="$DEPLOYMENT_ERRORS\n❌ Failed to deploy app: $app_dir"
+                  fi
+                done
+              fi
             fi
           fi
           
